[package]
name = "p2p-tunnel"
version = "0.1.8"
edition = "2024"
description = "Instantly share a localhost port over P2P using Iroh"
repository = "https://github.com/drmikesamy/p2p-tunnel"
license = "MIT"
readme = "README.md"

[dependencies]
iroh = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
